# sif-rs

./: Cargo.toml  README.md
examples/: SIERRA.SIF
src/: lib.rs  types.rs
