[package]
name = "sif-rs"
authors = ["Avinash Madavan <avinash.madavan@gmail.com>"]
version = "0.9.0"
rust-version = "1.85"
edition = "2024"
description = "Parser for the Standard Input Format (SIF) used in mathematical optimization"
license = "MIT"
repository = "https://github.com/amadavan/sif-rs"
keywords = ["sif", "mps", "optimization", "parser"]
categories = ["parser-implementations", "mathematics", "science"]
readme = "README.md"

[dependencies]
derive_more = {version = "2.1.1", features = ["full"]}
regex = "1.12.3"
